plugins {
  id 'java'
  id 'org.springframework.boot' version '4.0.1'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'android.tester'
version = '0.0.1-SNAPSHOT'
description = 'Bachellor project: Android app testing site'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
  maven { url = 'https://jitpack.io' }
  maven { url = 'https://maven.openimaj.org' }
  google()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-h2console'
  implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//  implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
  implementation 'org.springframework.boot:spring-boot-starter-data-rest'
  implementation 'org.springframework.boot:spring-boot-starter-jdbc'
  implementation 'org.liquibase:liquibase-core'
  implementation 'org.springframework.boot:spring-boot-starter-liquibase'
  implementation 'org.springframework.boot:spring-boot-starter-restclient'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-authorization-server'
  implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
  implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
  implementation 'org.springframework.boot:spring-boot-starter-session-jdbc'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-webmvc'
  implementation 'org.springframework.boot:spring-boot-starter-webservices'
  implementation 'org.springframework.boot:spring-boot-starter-websocket'
  implementation 'org.springframework.security:spring-security-webauthn'
  compileOnly 'org.projectlombok:lombok'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  runtimeOnly 'com.h2database:h2'
//  runtimeOnly 'io.r2dbc:r2dbc-h2'
  runtimeOnly 'org.postgresql:postgresql'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-restdocs'
  testImplementation 'org.springframework.boot:spring-boot-starter-data-jdbc-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
//  testImplementation 'org.springframework.boot:spring-boot-starter-data-r2dbc-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-data-rest-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-liquibase-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-authorization-server-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-session-jdbc-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-webservices-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-websocket-test'
  testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  // OpenCV (Computer Vision) - OpenPnP bundle includes native binaries
  implementation 'org.openpnp:opencv:4.9.0-0'
  // Tesseract (OCR)
  implementation 'net.sourceforge.tess4j:tess4j:5.10.0'
  // Image Processing Utils (if needed by specific checks)
  implementation 'org.openimaj:image-processing:1.3.10'
  // Logging (Ensure SLF4J is available)
  implementation 'org.slf4j:slf4j-api:2.0.9'

  // LingPipe (Aliasi) - resolving com.aliasi.*
//  implementation 'de.julielab:aliasi-lingpipe:4.1.2-rc'
  // LingPipe (Aliasi) - Switched to official Maven Central artifact
  implementation 'de.julielab:aliasi-lingpipe:4.1.0'

  // LanguageTool - resolving org.languagetool.*
//  implementation 'org.languagetool:languagetool-core:6.4'
  implementation 'org.languagetool:languagetool-core:6.6'
//  implementation 'org.languagetool:language-en:6.4'     // Add other languages as needed (es, fr, etc.)
  implementation 'org.languagetool:language-en:6.6'     // Add other languages as needed (es, fr, etc.)

  // Lingua - resolving com.github.pemistahl.lingua.*
  implementation 'com.github.pemistahl:lingua:1.2.2'

  // Optimaize Language Detector - resolving com.optimaize.langdetect.*
  implementation 'com.optimaize.languagedetector:language-detector:0.6'

  // Apache Tika Language Detect - resolving org.apache.tika.langdetect.*
//  implementation 'org.apache.tika:tika-langdetect-optimaize:2.9.2'
  implementation 'org.apache.tika:tika-langdetect:1.28.5'

  // OpenNLP - resolving opennlp.tools.*
  implementation 'org.apache.opennlp:opennlp-tools:2.3.0'

  // Marvin Image Processing - resolving marvin.io.* and marvinplugins.*
  implementation 'com.github.downgoon:MarvinFramework:1.5.5'
  implementation 'com.github.downgoon:MarvinPlugins:1.5.5'

  // Jackson XML - resolving com.fasterxml.jackson.dataformat.xml.*
  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

  // Apache Commons Lang 3 - resolving org.apache.commons.lang3.tuple.Pair
  implementation 'org.apache.commons:commons-lang3'

  implementation 'com.google.guava:guava:33.5.0-jre' // Force JRE version
//  modules {
//    module("com.google.guava:guava") {
//      replacedBy("com.google.guava:guava", "Use JDK flavor of Guava instead of Android flavor")
//    }
//  }
}

tasks.named('test') {
  useJUnitPlatform()
  // "Allow the unnamed module (the classpath) to access native code"
  jvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.named('bootRun') {
  jvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.named('asciidoctor') {
  inputs.dir snippetsDir
  dependsOn test
}
